k8s/1-control-plane/cilium/infra-gateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infra-gateway
  labels:
    name: infra
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-gateway
  namespace: infra-gateway
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
